# dlms_rs

./: .gitignore  COSEM_OPEN_ANALYSIS.md  Cargo.toml  README.md  TERMS_IMPLEMENTATION.md  TODO.md  libstate.rlib
.claude/: settings.local.json
.cursor/: cursor_.md
.github/workflows/: claude-review.yml
dlms/: Cargo.toml
dlms-application/: Cargo.toml  DESIGN_GET_WITHLIST.md
dlms-application/src/: addressing.rs  encrypted.rs  lib.rs  pdu.rs  protocol_identification.rs  service.rs  sn_pdu.rs
dlms-application/src/association/: context.rs  events.rs  mod.rs  state.rs
dlms-application/src/service/: action.rs  event.rs  get.rs  mod.rs  set.rs
dlms-asn1/: Cargo.toml
dlms-asn1/src/: error.rs  lib.rs
dlms-asn1/src/axdr/: decoder.rs  encoder.rs  mod.rs  types.rs
dlms-asn1/src/ber/: decoder.rs  encoder.rs  mod.rs  types.rs
dlms-asn1/src/cosem/: mod.rs
dlms-asn1/src/iso_acse/: mod.rs  pdu.rs  types.rs
dlms-client/: Cargo.toml
dlms-client/examples/: test_debug.rs
dlms-client/src/: batch_reader.rs  batch_writer.rs  block_transfer.rs  browser.rs  client_api.rs  connection_pool.rs  event_handler.rs  lib.rs  reconnect.rs
dlms-client/src/connection/: builder.rs  connection.rs  ln_connection.rs  mod.rs  serial_builder.rs  sn_connection.rs  tcp_builder.rs
dlms-core/: Cargo.toml
dlms-core/src/: error.rs  lib.rs  obis_code.rs  pool.rs
dlms-core/src/datatypes/: bit_string.rs  compact_array.rs  cosem_date.rs  cosem_date_time.rs  cosem_time.rs  data_object.rs  mod.rs
dlms-interface/: Cargo.toml
dlms-interface/src/: account.rs  action_schedule.rs  activity_calendar.rs  alarm.rs  association_access.rs  association_ln.rs  association_sn.rs  auto_connect.rs  boolean_array.rs  charge.rs  clock.rs  compact_data.rs  credit.rs  data.rs  data_store.rs  demand_register.rs  descriptor.rs  disconnect_control.rs  extended_register.rs  extended_register_scaler.rs  firmware_controller.rs  generic_setup.rs  gprs_setup.rs  gsm_controller.rs  iec_hdlc_setup.rs  iec_local_port_setup.rs  iec_twisted_pair_setup.rs  image_transfer.rs  ip4_setup.rs  ip6_setup.rs  key_table.rs  led_display.rs  lib.rs  limiter.rs  login.rs  mac_address_setup.rs  mbus_slave_port_setup.rs  modem_configuration.rs  modem_process.rs  octet_string.rs  (+25 more)
dlms-interface/src/attribute/: mod.rs
dlms-interface/src/macros/: mod.rs
dlms-interface/src/method/: mod.rs
dlms-license/: GPL-3.0.txt
dlms-security/: Cargo.toml
dlms-security/src/: auth_flow.rs  authentication.rs  constants.rs  encryption.rs  error.rs  key_agreement.rs  key_management.rs  lib.rs  suite.rs  suite_negotiation.rs  utils.rs  validation.rs  xdlms.rs  xdlms_frame.rs
dlms-server/: Cargo.toml
dlms-server/src/: access_control.rs  connection_manager.rs  error.rs  event.rs  lib.rs  listener.rs  request_stats.rs  server.rs  server_state.rs  set_block_transfer.rs
dlms-session/: Cargo.toml  DESIGN_DISC_DM.md  DESIGN_HCS_FIX.md  DESIGN_RR_FRAME.md  DESIGN_SNRM_UA.md  DISC_DM_FIX_SUMMARY.md  FIXES_COMPLETE_SUMMARY.md  HCS_FIX_SUMMARY.md  RR_FRAME_FIX_SUMMARY.md  SNRM_UA_FIX_SUMMARY.md
dlms-session/src/: error.rs  lib.rs  wrapper.rs
dlms-session/src/hdlc/: address.rs  connection.rs  decoder.rs  dispatcher.rs  fcs.rs  frame.rs  mod.rs  state.rs  statistics.rs  window.rs
dlms-transport/: Cargo.toml
dlms-transport/src/: error.rs  lib.rs  serial.rs  stream.rs  tcp.rs  udp.rs
dlms/src/: lib.rs
docs/interface-classes/: IC10_Schedule.md  IC11_SpecialDaysTable.md  IC12_AssociationSN.md  IC15_AssociationLN.md  IC17_SAPAssignment.md  IC18_ImageTransfer.md  IC19_IECLocalPortSetup.md  IC1_Data.md  IC20_ActivityCalendar.md  IC21_RegisterMonitor.md  IC22_SingleActionSchedule.md  IC23_IECHDLCSetup.md  IC27_ModemConfiguration.md  IC28_AutoAnswer.md  IC29_AutoConnect.md  IC3_Register.md  IC40_PushSetup.md  IC41_TCPUDPSetup.md  IC42_IPv4Setup.md  IC43_MACAddressSetup.md  IC48_IPv6Setup.md  IC4_ExtendedRegister.md  IC5_DemandRegister.md  IC64_SecuritySetup.md  IC6_RegisterActivation.md  IC70_DisconnectControl.md  IC71_Limiter.md  IC7_ProfileGeneric.md  IC8_Clock.md  IC9_ScriptTable.md  README.md
docs/plans/: 2025-01-15-high-priority-implementation.md
examples/: README.md  basic_client.rs  basic_server.rs  batch_operations.rs  block_transfer.rs  connection_pool.rs  event_handling.rs  object_browser.rs  server_statistics.rs
