[package]
name = "dlms-application"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Application layer for DLMS/COSEM (PDU, services)"

[lib]
name = "dlms_application"
path = "src/lib.rs"

[dependencies]
dlms-core = { path = "../dlms-core" }
dlms-asn1 = { path = "../dlms-asn1" }
dlms-security = { path = "../dlms-security" }
bytes = { workspace = true }
