[package]
name = "dlms-interface"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "COSEM interface classes for DLMS"

[lib]
name = "dlms_interface"
path = "src/lib.rs"

[dependencies]
dlms-core = { path = "../dlms-core" }
dlms-asn1 = { path = "../dlms-asn1" }
dlms-application = { path = "../dlms-application" }
dlms-security = { path = "../dlms-security" }
tokio = { workspace = true }
async-trait = { workspace = true }
