[package]
name = "dlms-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Security layer for DLMS/COSEM (encryption, authentication)"

[lib]
name = "dlms_security"
path = "src/lib.rs"

[dependencies]
ring = { workspace = true }
aes-gcm = { workspace = true }
aes = "0.8"
cipher = "0.4"
hmac = { workspace = true }
sha2 = { workspace = true }
dlms-core = { path = "../dlms-core" }
bytes = { workspace = true }
rand = "0.8"
rand = "0.8"
