[package]
name = "dlms-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "DLMS/COSEM server implementation"

[lib]
name = "dlms_server"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
log = "0.4"
dlms-core = { path = "../dlms-core" }
dlms-transport = { path = "../dlms-transport" }
dlms-session = { path = "../dlms-session" }
dlms-security = { path = "../dlms-security" }
dlms-application = { path = "../dlms-application" }
dlms-interface = { path = "../dlms-interface" }
anyhow = { workspace = true }
